# recruitment_mp3_converter

./: CMakeLists.txt  LICENSE  README.md
cmake/: acquire_lame.cmake
include/: LameEncodingTask.h  WavefileChunks.h  WavefileConversionTask.h
src/: WavefileConversionTask.cpp  main.cpp
